--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ npm-debug.log
 node_modules
 settings.json
 
+.migrate
+
 # ----------------------------
 # Webstorm
 # ----------------------------
