--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "lodash": "^2.4.1",
     "moment": "^2.8.3",
-    "mongoose": "^3.8.17"
+    "mongoose": "^3.8.17",
+    "migrate": "~0.1.4"
   }
 }
